--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.12",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.0.0",
     "@mui/styles": "^6.4.12",
     "framer-motion": "^12.19.2",
     "next": "15.3.2",
